--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -75,7 +75,8 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v5.0.0
         with:
-          context: .
+          context: ./SimpleCDN
+          dockerfile: ./SimpleCDN/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
