--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -76,7 +76,7 @@ jobs:
         uses: docker/build-push-action@v5.0.0
         with:
           context: .
-          dockerfile: ./SimpleCDN/Dockerfile
+          file: ./SimpleCDN/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
