--- a/SimpleCDN/Dockerfile
+++ b/SimpleCDN/Dockerfile
@@ -15,6 +15,7 @@ COPY ["SimpleCDN/SimpleCDN.csproj", "SimpleCDN/"]
 RUN dotnet restore "./SimpleCDN/SimpleCDN.csproj"
 COPY . .
 WORKDIR "/src/SimpleCDN"
+RUN apt update && apt install -y clang zlib1g-dev
 RUN dotnet build "./SimpleCDN.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
