Specify target arch in dotnet publish

--- a/SimpleCDN/Dockerfile
+++ b/SimpleCDN/Dockerfile
@@ -16,12 +16,12 @@ RUN dotnet restore "./SimpleCDN/SimpleCDN.csproj"
 COPY . .
 WORKDIR "/src/SimpleCDN"
 RUN apt update && apt install -y clang zlib1g-dev
-RUN dotnet build "./SimpleCDN.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./SimpleCDN.csproj" -c $BUILD_CONFIGURATION -r $BUILDPLATFORM -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./SimpleCDN.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./SimpleCDN.csproj" -c $BUILD_CONFIGURATION -r $BUILDPLATFORM -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
