--- a/SimpleCDN/Dockerfile
+++ b/SimpleCDN/Dockerfile
@@ -1,7 +1,7 @@
 # See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
+FROM --platform=$TARGETPLATFORM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
@@ -10,18 +10,22 @@ EXPOSE 8080
 # This stage is used to build the service project
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
+ARG TARGETPLATFORM
+ARG BUILDPLATFORM
 WORKDIR /src
 COPY ["SimpleCDN/SimpleCDN.csproj", "SimpleCDN/"]
 RUN dotnet restore "./SimpleCDN/SimpleCDN.csproj"
 COPY . .
 WORKDIR "/src/SimpleCDN"
 RUN apt update && apt install -y clang zlib1g-dev
-RUN dotnet build "./SimpleCDN.csproj" -c $BUILD_CONFIGURATION -r $BUILDPLATFORM -o /app/build
+RUN dotnet build "./SimpleCDN.csproj" -c $BUILD_CONFIGURATION -r $TARGETPLATFORM -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./SimpleCDN.csproj" -c $BUILD_CONFIGURATION -r $BUILDPLATFORM -o /app/publish /p:UseAppHost=false
+ARG TARGETPLATFORM
+ARG BUILDPLATFORM
+RUN dotnet publish "./SimpleCDN.csproj" -c $BUILD_CONFIGURATION -r $TARGETPLATFORM -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
