--- a/SimpleCDN/Dockerfile
+++ b/SimpleCDN/Dockerfile
@@ -20,7 +20,7 @@ COPY . .
 WORKDIR "/src/SimpleCDN"
 
 # RUN apt update && apt install -y clang zlib1g-dev binutils-aarch64-linux-gnu
-RUN dotnet build "./SimpleCDN.csproj" --no-restore -c $BUILD_CONFIGURATION -r $DOTNET_BUILD_PLATFORM -o /app/build
+RUN dotnet build "./SimpleCDN.csproj" -c $BUILD_CONFIGURATION -r $DOTNET_BUILD_PLATFORM -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
