--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -57,6 +57,8 @@ jobs:
           
       - name: Setup Buildx
         uses: docker/setup-buildx-action@v3.7.1
+        with:
+          platforms: linux/amd64
       # Extract metadata (tags, labels) for Docker
       # https://github.com/docker/metadata-action
       - name: Extract Docker metadata
