Re-organize folder structure and add size-limited cache

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,7 @@ services:
     build:
       context: .
       dockerfile: SimpleCDN/Dockerfile
+    volumes:
+    - ../:/data
+    environment:
+    - CDN_DATA_ROOT=/data
