--- a/SimpleCDN/SimpleCDN.csproj
+++ b/SimpleCDN/SimpleCDN.csproj
@@ -14,6 +14,11 @@
 	  <DebugType>none</DebugType>
 	</PropertyGroup>
 
+	<ItemGroup Condition="'$(Configuration)'=='Release'">
+	  <Content Remove="wwwroot\index.html" />
+	  <Content Remove="appsettings.Development.json" />
+	</ItemGroup>
+	
 	<ItemGroup>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
