--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,7 +20,7 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
-  BRANCH_NAME: ${{ github.head_ref || github.ref_name }} 
+  BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
 
 jobs:
@@ -81,6 +81,8 @@ jobs:
           platforms: linux/arm64
           build-args: |
             DOTNET_BUILD_PLATFORM=linux-arm64
+            # set version number to the version in the tag name if this is a release
+            VERSION_NUMBER=${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.ref.replace('refs/tags/v', '') || '1.0.0' }}
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
