--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
 services:
   simplecdn:
-    image: ${DOCKER_REGISTRY-}simplecdn
+    image: ${DOCKER_REGISTRY-}simplecdn:local-dev
     build:
       context: .
       dockerfile: SimpleCDN/Dockerfile
+      # args:
+      # - VERSION_NUMBER=1.0.0
+      # - VERSION_SUFFIX=rc1
     volumes:
     - ../:/data
     environment:
