--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,8 +10,6 @@ on:
     branches: [ "main" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
-  pull_request:
-    # branches: [ "main" ]
   workflow_dispatch:
 
 env:
@@ -61,8 +59,10 @@ jobs:
         uses: docker/metadata-action@v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          # use the dev tag if build is on main branch, use latest tag if build is on release
+          # this means latest will always mean the latest stable build.
           tags: |
-            latest
+            ${{ env.BRANCH_NAME == 'main' && 'dev' || 'latest' }}
             ${{ github.sha }}
             ${{ env.BRANCH_NAME }}
 
