--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,7 +25,7 @@ env:
 jobs:
   build:
     concurrency:
-      group: ${{ github.workflow }}-${{ env.BRANCH_NAME }}
+      group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
       cancel-in-progress: true
     runs-on: buildjet-2vcpu-ubuntu-2204-arm
     permissions:
