--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,17 +24,26 @@ env:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        platform:
+          - arch: linux/arm64
+            dotnet_rid: linux-arm64
+            runner: buildjet-2vcpu-ubuntu-2204-arm
+          - arch: linux/amd64
+            dotnet_rid: linux-amd64
+            runner: ubuntu-latest
     concurrency:
       group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
       cancel-in-progress: true
-    runs-on: buildjet-2vcpu-ubuntu-2204-arm
+    runs-on: ${{ matrix.platform.runner }}
     permissions:
       contents: read
       packages: write
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
       id-token: write
-
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -77,6 +86,7 @@ jobs:
         id: build-and-push
         env:
           BRANCH_NAME: ${{ env.BRANCH_NAME }}
+          DOTNET_PLATFORM: ${{ matrix.platform.dotnet_rid }}
         uses: docker/build-push-action@v6.10.0
         with:
           context: .
@@ -84,9 +94,9 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/arm64
+          platforms: ${{ matrix.platform.arch }}
           build-args: |
-            DOTNET_BUILD_PLATFORM=linux-arm64
+            DOTNET_BUILD_PLATFORM=$DOTNET_PLATFORM
             # set version number to the version in the tag name if this is a release
             # VERSION_NUMBER=$BRANCH_NAME
 
