--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -89,9 +89,6 @@ jobs:
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         id: build-and-push
-        env:
-          BRANCH_NAME: ${{ env.BRANCH_NAME }}
-          DOTNET_PLATFORM: ${{ matrix.dotnet_rid }}
         uses: docker/build-push-action@v6.10.0
         with:
           context: .
@@ -101,9 +98,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           platforms: ${{ matrix.arch }}
           build-args: |
-            DOTNET_BUILD_PLATFORM=$DOTNET_PLATFORM
-            # set version number to the version in the tag name if this is a release
-            # VERSION_NUMBER=$BRANCH_NAME
+            DOTNET_BUILD_PLATFORM=${{ matrix.dotnet_rid }}
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
