--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,10 @@ updates:
     - "/SimpleCDN.Tests"
     schedule:
       interval: "weekly"
+  - package-ecosystem: "docker"
+    directory: "/SimpleCDN"
+    schedule:
+      interval: "weekly"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
