--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,8 +38,8 @@ jobs:
       with:
         dotnet-version: 9.0.x
     - name: Restore dependencies
-      run: dotnet restore SimpleCDN.Tests.Integration/SimpleCDN.Integration.csproj
+      run: dotnet restore SimpleCDN.Tests.Integration/SimpleCDN.Tests.Integration.csproj
     - name: Build
-      run: dotnet build SimpleCDN.Tests.Integration/SimpleCDN.Integration.csproj --no-restore
+      run: dotnet build SimpleCDN.Tests.Integration/SimpleCDN.Tests.Integration.csproj --no-restore
     - name: Test
-      run: dotnet test SimpleCDN.Tests.Integration/SimpleCDN.Integration.csproj --no-build --verbosity normal
+      run: dotnet test SimpleCDN.Tests.Integration/SimpleCDN.Tests.Integration.csproj --no-build --verbosity normal
