--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: NUnit Unit Tests
+name: Tests
 
 on:
   push:
@@ -16,6 +16,7 @@ on:
 jobs:
   unit-test:
     runs-on: ubuntu-latest
+    name: Unit Tests
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
@@ -31,6 +32,7 @@ jobs:
 
   integration-test:
     runs-on: ubuntu-latest
+    name: Integration Tests
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
