Split unit- and integration test jobs (#22)
* Update dotnet.yml

* Fix file name

* Rename some workflow elements

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: NUnit Unit Tests
+name: Tests
 
 on:
   push:
@@ -14,10 +14,9 @@ on:
       - '**.md'
 
 jobs:
-  build:
-
+  unit-test:
     runs-on: ubuntu-latest
-
+    name: Unit Tests
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
@@ -25,8 +24,24 @@ jobs:
       with:
         dotnet-version: 9.0.x
     - name: Restore dependencies
-      run: dotnet restore SimpleCDN.sln
+      run: dotnet restore SimpleCDN.Tests/SimpleCDN.Tests.csproj
     - name: Build
-      run: dotnet build SimpleCDN.sln --no-restore
+      run: dotnet build SimpleCDN.Tests/SimpleCDN.Tests.csproj --no-restore
     - name: Test
-      run: dotnet test SimpleCDN.sln --no-build --verbosity normal
+      run: dotnet test SimpleCDN.Tests/SimpleCDN.Tests.csproj --no-build --verbosity normal
+
+  integration-test:
+    runs-on: ubuntu-latest
+    name: Integration Tests
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.0.x
+    - name: Restore dependencies
+      run: dotnet restore SimpleCDN.Tests.Integration/SimpleCDN.Tests.Integration.csproj
+    - name: Build
+      run: dotnet build SimpleCDN.Tests.Integration/SimpleCDN.Tests.Integration.csproj --no-restore
+    - name: Test
+      run: dotnet test SimpleCDN.Tests.Integration/SimpleCDN.Tests.Integration.csproj --no-build --verbosity normal
