--- a/SimpleCDN/Dockerfile
+++ b/SimpleCDN/Dockerfile
@@ -49,4 +49,12 @@ EXPOSE 8080
 COPY --from=publish /app/publish .
 ENV CDN_DATA_ROOT=/data
 
+# Install curl for healthcheck
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+    curl
+
+HEALTHCHECK --interval=30s --timeout=3s --start-period=1s --start-interval=2s --retries=3 \
+    CMD curl --fail http://localhost:8080/_cdn/server/health || exit 1
+    
 ENTRYPOINT ["./SimpleCDN"]
