--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,16 @@ services:
       dockerfile: SimpleCDN/Dockerfile
     volumes:
     - ../:/data
+    ports:
+    - "1780:8080"
     environment:
     - CDN_DATA_ROOT=/data
+    - ASPNETCORE_ENVIRONMENT=Development
+    - ASPNETCORE_URLS=http://+:8080
+    healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost:8080/_cdn/server/health"]
+        interval: 30s
+        timeout: 5s
+        start_interval: 2s
+        start_period: 2s
+        retries: 5  
