Fix ports not being properly mapped/applied

--- a/SimpleCDN/Dockerfile
+++ b/SimpleCDN/Dockerfile
@@ -9,6 +9,11 @@ ARG FINAL_BASE_IMAGE=${LAUNCHING_FROM_VS:+aotdebug}
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 USER $APP_UID
 WORKDIR /app
+ENV CDN_DATA_ROOT=/data
+ENV ASPNETCORE_URLS=http://+:8080
+
+EXPOSE 8080
+
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
@@ -44,12 +49,16 @@ USER app
 FROM ${FINAL_BASE_IMAGE:-mcr.microsoft.com/dotnet/runtime-deps:9.0} AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENV CDN_DATA_ROOT=/data
 
 # Install curl for use in healthchecks. Due to possible changes
 # to ports, we can't specify the HEALTHCHECK in the Dockerfile
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
     curl
-    
+
+ENV CDN_DATA_ROOT=/data
+ENV ASPNETCORE_URLS=http://+:8080
+
+EXPOSE 8080
+
 ENTRYPOINT ["./SimpleCDN"]
