--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,11 +24,11 @@ jobs:
       with:
         dotnet-version: 9.0.x
     - name: Restore dependencies
-      run: dotnet restore SimpleCDN.Tests/SimpleCDN.Tests.csproj
+      run: dotnet restore SimpleCDN.Tests.Unit/SimpleCDN.Tests.Unit.csproj
     - name: Build
-      run: dotnet build SimpleCDN.Tests/SimpleCDN.Tests.csproj --no-restore -p:TreatWarningsAsErrors=true
+      run: dotnet build SimpleCDN.Tests.Unit/SimpleCDN.Tests.Unit.csproj --no-restore -p:TreatWarningsAsErrors=true
     - name: Test
-      run: dotnet test SimpleCDN.Tests/SimpleCDN.Tests.csproj --no-build --verbosity normal -p:TreatWarningsAsErrors=true
+      run: dotnet test SimpleCDN.Tests.Unit/SimpleCDN.Tests.Unit.csproj --no-build --verbosity normal -p:TreatWarningsAsErrors=true
 
   integration-test:
     runs-on: ubuntu-latest
