fix errors due to rename and apply some suggestions

--- a/SimpleCDN/Dockerfile
+++ b/SimpleCDN/Dockerfile
@@ -12,8 +12,9 @@ WORKDIR /app
 ENV CDN_DATA_ROOT=/data
 ENV ASPNETCORE_URLS=http://+:8080
 
-EXPOSE 8080
+COPY ["SimpleCDN/health-check.sh", "/bin/health-check.sh"]
 
+EXPOSE 8080
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
@@ -28,6 +29,7 @@ COPY ["SimpleCDN/SimpleCDN.csproj", "SimpleCDN/"]
 RUN dotnet restore "./SimpleCDN/SimpleCDN.csproj"
 COPY . .
 WORKDIR "/src/SimpleCDN"
+
 RUN dotnet build "./SimpleCDN.csproj" -c $BUILD_CONFIGURATION -r $DOTNET_BUILD_PLATFORM -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
@@ -50,15 +52,17 @@ FROM ${FINAL_BASE_IMAGE:-mcr.microsoft.com/dotnet/runtime-deps:9.0} AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 
+ENV CDN_DATA_ROOT=/data
+ENV ASPNETCORE_URLS=http://+:8080
+
+EXPOSE 8080
+
+COPY ["SimpleCDN/health-check.sh", "/bin/health-check.sh"]
+
 # Install curl for use in healthchecks. Due to possible changes
 # to ports, we can't specify the HEALTHCHECK in the Dockerfile
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
     curl
-
-ENV CDN_DATA_ROOT=/data
-ENV ASPNETCORE_URLS=http://+:8080
-
-EXPOSE 8080
 
 ENTRYPOINT ["./SimpleCDN"]
