--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,9 +26,9 @@ jobs:
     strategy:
       matrix:
        include:
-        #- arch: "linux/arm64"
-        #  dotnet_rid: "linux-arm64"
-        #  runner: "buildjet-2vcpu-ubuntu-2204-arm"
+        - arch: "linux/arm64"
+          dotnet_rid: "linux-arm64"
+          runner: "buildjet-2vcpu-ubuntu-2204-arm"
         - arch: "linux/amd64"
           dotnet_rid: "linux-amd64"
           runner: "ubuntu-latest"
