--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -164,14 +164,17 @@ jobs:
           # append the full image name and digest
           labels=$(jq -cr '.labels | to_entries | map("--annotation \"manifest-descriptor:" + .key + "=" + .value + "\"") | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON")
           tags=$(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON")
+          sources=$(printf '${{ env.DOCKER_REPO }}@sha256:%s ' *)
           echo "LABELS"
           echo "$labels"
           echo "TAGS"
           echo "$tags"
+          echo "SOURCES"
+          echo "$sources"
           docker buildx imagetools create \
             $labels \
             $tags \
-            $(printf '${{ env.DOCKER_REPO }}@sha256:%s ' *)
+            $sources
   
       - name: Inspect image
         run: |
