--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -162,17 +162,17 @@ jobs:
           # extract labels from the metadata and add them as annotations
           # extract tags from the metadata and append them to the command
           # append the full image name and digest
-          labels=$(jq -cr '.labels | to_entries | map("--annotation \"index:" + .key + "=" + .value + "\"") | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON")
+          # labels=$(jq -cr '.labels | to_entries | map("--annotation \"index:" + .key + "=" + .value + "\"") | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON")
           tags=$(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON")
           sources=$(printf '${{ env.DOCKER_REPO }}@sha256:%s ' *)
-          declare -a "label_array=($labels)"
-          declare -a "tag_array=($tags)"
-          echo "LABELS"
-          echo "$labels"
-          echo "$label_array"
-          docker buildx imagetools create \
-            "${label_array[@]}" \
-            "${tag_array[@]}" \
+          # declare -a "label_array=($labels)"
+          # declare -a "tag_array=($tags)"
+          # echo "LABELS"
+          # echo "$labels"
+          # echo "$label_array"
+          # docker buildx imagetools create \
+            --annotation "org.opencontainers.image.description=A simple CDN with local in-memory caching"
+            $tags \
             $sources
   
       - name: Inspect image
