--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,9 +21,9 @@ jobs:
     strategy:
       matrix:
        include:
-#        - arch: "linux/arm64"
-#          dotnet_rid: "linux-arm64"
-#          runner: "buildjet-2vcpu-ubuntu-2204-arm"
+        - arch: "linux/arm64"
+          dotnet_rid: "linux-arm64"
+          runner: "buildjet-2vcpu-ubuntu-2204-arm"
         - arch: "linux/amd64"
           dotnet_rid: "linux-amd64"
           runner: "ubuntu-latest"
@@ -159,22 +159,11 @@ jobs:
       - name: Create manifest list and push
         working-directory: /tmp/digests
         run: |
-          # extract labels from the metadata and add them as annotations
           # extract tags from the metadata and append them to the command
           # append the full image name and digest
-          # labels=$(jq -cr '.labels | to_entries | map("--annotation \"index:" + .key + "=" + .value + "\"") | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON")
           tags=$(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON")
           sources=$(printf '${{ env.DOCKER_REPO }}@sha256:%s ' *)
-          # declare -a "label_array=($labels)"
-          # declare -a "tag_array=($tags)"
-          # echo "LABELS"
-          # echo "$labels"
-          # echo "$label_array"
-          docker buildx imagetools create \
-            --annotation "org.opencontainers.image.description=A simple CDN with local in-memory caching" \
-            $tags \
-            $sources
-  
+          docker buildx imagetools create $tags $sources
       - name: Inspect image
         run: |
           docker buildx imagetools inspect ${{ env.DOCKER_REPO }}:${{ steps.meta.outputs.version }}
@@ -192,5 +181,5 @@ jobs:
         # against the sigstore community Fulcio instance.
         run: |
           # extract the digest using buildx imagetools inspect and take only the sha256:...
-          DIGEST=$(docker buildx imagetools inspect ghcr.io/jonathanbout/simplecdn:latest | grep -Po "(?<=Digest:)\s*sha256:.*" | grep -Po "[^\s]*")
+          DIGEST=$(docker buildx imagetools inspect ${{ env.DOCKER_REPO }}:${{ steps.meta.outputs.version }} | grep -Po "(?<=Digest:)\s*sha256:.*" | grep -Po "[^\s]*")
           echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
