--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,7 +26,7 @@ jobs:
           runner: "buildjet-2vcpu-ubuntu-2204-arm"
         - arch: "linux/amd64"
           dotnet_rid: "linux-amd64"
-          runner: "ubuntu-latest"
+          runner: "ubuntu-22.04"
     concurrency:
       group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}-${{ matrix.arch }}
       cancel-in-progress: true
@@ -106,6 +106,7 @@ jobs:
 
   merge:
     runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request' }}
     needs:
       - build
     permissions:
@@ -148,14 +149,20 @@ jobs:
         uses: docker/metadata-action@v5.6.1
         with:
           images: ${{ env.DOCKER_REPO }}
+            # latest tag always represents latest stable release
+            # include git commit SHA, git branch name, git tag name
+            # when a semver tag, e.g. '1.2.3', add tags '1', '1.2' and '1.2.3'
           tags: |
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') }}
             type=sha,format=long
             type=ref,event=branch
             type=ref,event=tag
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}
             type=semver,pattern={{major}}.{{minor}}
+            # disable automatic latest tag
+          flavor: |
+            latest=false
       - name: Create manifest list and push
         working-directory: /tmp/digests
         run: |
@@ -180,6 +187,6 @@ jobs:
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
         run: |
-          # extract the digest using buildx imagetools inspect and take only the sha256:...
+          # extract the digest using buildx imagetools inspect | take only the sha256:... | remove whitespace
           DIGEST=$(docker buildx imagetools inspect ${{ env.DOCKER_REPO }}:${{ steps.meta.outputs.version }} | grep -Po "(?<=Digest:)\s*sha256:.*" | grep -Po "[^\s]*")
           echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
