Move mocks to separate project, re-add benchmark project

--- a/SimpleCDN.Tests.Integration/SimpleCDN.Tests.Integration.csproj
+++ b/SimpleCDN.Tests.Integration/SimpleCDN.Tests.Integration.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SimpleCDN.Tests.Mocks\SimpleCDN.Tests.Mocks.csproj" />
     <ProjectReference Include="..\SimpleCDN\SimpleCDN.csproj" />
   </ItemGroup>
 
