--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -156,11 +156,10 @@ jobs:
             type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') }}
             type=sha,format=long
             type=ref,event=branch
-            type=ref,event=tag
             type=semver,pattern={{version}}
-            type=semver,pattern={{major}}
+            type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
             type=semver,pattern={{major}}.{{minor}}
-            # disable automatic latest tag
+          # disable automatic latest tag
           flavor: |
             latest=false
       - name: Create manifest list and push
