--- a/SimpleCDN/SimpleCDN.csproj
+++ b/SimpleCDN/SimpleCDN.csproj
@@ -11,6 +11,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)'=='Release'">
+		<!-- Release mode size optimizations -->
 		<DebugType>none</DebugType>
 		<DebuggerSupport>false</DebuggerSupport>
 		<EnableUnsafeUTF7Encoding>false</EnableUnsafeUTF7Encoding>
