--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,4 @@ services:
     - CDN_DATA_ROOT=/data
     - ASPNETCORE_ENVIRONMENT=Development
     - Cache__Redis__ConnectionString=redis:6379 # Only needed if Cache__Type=Redis
-    - Cache__Type=Disabled # Redis, InMemory, or Disabled
+    - Cache__Type=Redis # Redis, InMemory, or Disabled
