--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,13 +7,16 @@ version: 2
 updates:
   - package-ecosystem: "nuget" # See documentation for possible values
     directories: # Location of package manifests
-    - "/SimpleCDN"
-    - "/SimpleCDN.Tests"
-    - "/SimpleCDN.Tests.Integration"
+    - "/src"
+    - "/tests/integration"
+    - "/tests/unit"
+    - "/tests/mocks"
+    - "/tests/load"
+    - "/benchmarks"
     schedule:
       interval: "weekly"
   - package-ecosystem: "docker"
-    directory: "/SimpleCDN"
+    directory: "/src"
     schedule:
       interval: "weekly"
   - package-ecosystem: "github-actions"
